clk: imx: add i.MX8MN clk support
Reuse i.MX8MM clk driver for i.MX8MN.

Signed-off-by: Peng Fan <peng.fan@nxp.com>

--- a/drivers/clk/imx/Kconfig
+++ b/drivers/clk/imx/Kconfig
@@ -11,3 +11,10 @@ config CLK_IMX8MM
 	select CLK
 	help
 	  This enables support clock driver for i.MX8 platforms.
+
+config CLK_IMX8MN
+	bool "Clock support for i.MX8MM"
+	depends on IMX8MN
+	select CLK
+	help
+	  This enables support clock driver for i.MX8MN platforms.
